--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "E:/work/VS/IDF/ESP8266 GlovesTracker/.pio/build/d1_mini/firmware.elf",
+            "executable": "E:/work/VS/IDF/ESP32S3 GlovesTracker/.pio/build/d1_mini/firmware.elf",
             "projectEnvName": "d1_mini",
             "toolchainBinDir": "C:/Users/small/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "E:/work/VS/IDF/ESP8266 GlovesTracker/.pio/build/d1_mini/firmware.elf",
+            "executable": "E:/work/VS/IDF/ESP32S3 GlovesTracker/.pio/build/d1_mini/firmware.elf",
             "projectEnvName": "d1_mini",
             "toolchainBinDir": "C:/Users/small/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "E:/work/VS/IDF/ESP8266 GlovesTracker/.pio/build/d1_mini/firmware.elf",
+            "executable": "E:/work/VS/IDF/ESP32S3 GlovesTracker/.pio/build/d1_mini/firmware.elf",
             "projectEnvName": "d1_mini",
             "toolchainBinDir": "C:/Users/small/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart",
